<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@color/globle_color"
    android:layout_marginBottom="1.0dip">
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="40.0dip"
        android:layout_marginTop="0.0dip"
        android:background="@color/black"
        android:gravity="center_vertical">
        <ImageButton
            android:id="@+id/btn_about_redirect"
            android:layout_width="40.0dip"
            android:layout_height="fill_parent"
            android:background="@color/transparent"
            android:onClick="go_back"
            android:src="@drawable/go_back"/>
       
        <TextView 
            android:layout_width="0.0dip"
            android:layout_height="fill_parent"
            android:layout_weight="1.96"
            android:gravity="center"
            android:text="@string/app_setting"
            android:textColor="@color/globle_color"
            android:textSize="16.0sp"
            />
        <View 
            android:layout_width="40.0dip"
            android:layout_height="fill_parent"
            android:background="@color/transparent"
            android:src="@null"/>
    </LinearLayout>
    <ScrollView 
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:scrollbars="none">
        <LinearLayout 
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:background="@color/content_color">
            <LinearLayout 
                android:id="@+id/lay_user_info"
                android:layout_width="fill_parent"
                android:layout_height="170.0dip"
                android:layout_marginTop="0.0dip"
                android:orientation="vertical"
                android:scaleType="fitXY">
                <LinearLayout 
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal">
                    <ImageView 
                        android:layout_width="150.0dip"
                        android:layout_height="150.0dip"
                        android:layout_marginTop="10.0dip"
                        android:background="@drawable/zzf"
                        android:scaleType="fitCenter"/>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout 
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:background="@color/content_color"
                android:orientation="vertical">
               <LinearLayout 
                    android:id="@+id/offer_lay"
                    android:layout_width="fill_parent"
                    android:layout_height="40.0dip"
                    android:layout_marginTop="1.0dip"
                    android:background="@color/globle_color">
                    <ImageView 
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="0.0dip"
                        android:layout_marginLeft="10.0dip"
                        android:layout_marginTop="10.0dip"
                        android:layout_marginBottom="10.0dip"
                        android:layout_weight="1.0"
                        android:src="@drawable/user_collection"/>
                    <TextView 
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical" 
                        android:layout_marginRight="0.0dip"
                        android:layout_marginLeft="0.0dip"
                        android:layout_marginTop="10.0dip"
                        android:layout_marginBottom="10.0dip"
                        android:layout_weight="4"
                        android:gravity="center_vertical"
                        android:text="@string/app_offer"
                        android:textColor="@color/globle_text_color"
                        android:textSize="16.0dip"/>
                  <ImageView 
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_marginTop="10.0dip"
                      android:layout_marginBottom="10.0dip"
                      android:layout_marginLeft="10.0dip"
                      android:layout_marginRight="0.0dip"
                      android:src="@drawable/into_detail"/>
                </LinearLayout>
                <LinearLayout 
                    android:id="@+id/versions_lay"
                    android:layout_width="fill_parent"
                    android:layout_height="40.0dip"
                    android:background="@color/globle_color"
                    android:layout_marginTop="1.0dip">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10.0dip"
                        android:layout_marginBottom="10.0dip"
                        android:layout_marginLeft="10.0dip"
                        android:layout_marginRight="0.0dip"
                        android:layout_weight="1.0"
                        android:src="@drawable/check_versions"
                        />
                    <TextView 
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="10.0dip"
                        android:layout_marginTop="10.0dip"
                        android:layout_marginLeft="0.0dip"
                        android:layout_marginRight="0.0dip"
                        android:textColor="@color/globle_text_color"
                        android:textSize="16.0dip"
                        android:text="@string/app_update"
                        android:gravity="center_vertical"
                        android:layout_weight="4.0"/>
                    
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10.0dip"
                        android:layout_marginLeft="10.0dip"
                        android:layout_marginRight="0.0dip"
                        android:layout_marginTop="10.0dip"
                        android:src="@drawable/into_detail" >
                    </ImageView>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/share_lay"
                    android:layout_width="fill_parent"
                    android:layout_height="40.0dip"
                    android:layout_marginTop="1.0dip"
                    android:background="@color/globle_color" >

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10.0dip"
                        android:layout_marginLeft="10.0dip"
                        android:layout_marginRight="0.0dip"
                        android:layout_marginTop="10.0dip"
                        android:layout_weight="1"
                        android:src="@drawable/app_share" >
                    </ImageView>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="fill_parent"
                        android:layout_gravity="center_vertical"
                        android:layout_marginBottom="10.0dip"
                        android:layout_marginLeft="0.0dip"
                        android:layout_marginRight="0.0dip"
                        android:layout_marginTop="10.0dip"
                        android:layout_weight="4"
                        android:gravity="center_vertical"
                        android:text="@string/app_share"
                        android:textColor="@color/globle_text_color"
                        android:textSize="16.0sp" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10.0dip"
                        android:layout_marginLeft="10.0dip"
                        android:layout_marginRight="0.0dip"
                        android:layout_marginTop="10.0dip"
                        android:src="@drawable/into_detail" >
                    </ImageView>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/comments_lay"
                    android:layout_width="fill_parent"
                    android:layout_height="40.0dip"
                    android:layout_marginTop="1.0dip"
                    android:background="@color/globle_color" >

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10.0dip"
                        android:layout_marginLeft="10.0dip"
                        android:layout_marginRight="0.0dip"
                        android:layout_marginTop="10.0dip"
                        android:layout_weight="1"
                        android:src="@drawable/app_comments" >
                    </ImageView>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="fill_parent"
                        android:layout_gravity="center_vertical"
                        android:layout_marginBottom="10.0dip"
                        android:layout_marginLeft="0.0dip"
                        android:layout_marginRight="0.0dip"
                        android:layout_marginTop="10.0dip"
                        android:layout_weight="4"
                        android:gravity="center_vertical"
                        android:text="@string/app_comments"
                        android:textColor="@color/globle_text_color"
                        android:textSize="16.0sp" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10.0dip"
                        android:layout_marginLeft="10.0dip"
                        android:layout_marginRight="0.0dip"
                        android:layout_marginTop="10.0dip"
                        android:src="@drawable/into_detail" >
                    </ImageView>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/feedback_lay"
                    android:layout_width="fill_parent"
                    android:layout_height="40.0dip"
                    android:layout_marginTop="1.0dip"
                    android:background="@color/globle_color" >

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10.0dip"
                        android:layout_marginLeft="10.0dip"
                        android:layout_marginRight="0.0dip"
                        android:layout_marginTop="10.0dip"
                        android:layout_weight="1"
                        android:src="@drawable/app_comments" >
                    </ImageView>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="fill_parent"
                        android:layout_gravity="center_vertical"
                        android:layout_marginBottom="10.0dip"
                        android:layout_marginLeft="0.0dip"
                        android:layout_marginRight="0.0dip"
                        android:layout_marginTop="10.0dip"
                        android:layout_weight="4"
                        android:gravity="center_vertical"
                        android:text="@string/app_feedback"
                        android:textColor="@color/globle_text_color"
                        android:textSize="16.0sp" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10.0dip"
                        android:layout_marginLeft="10.0dip"
                        android:layout_marginRight="0.0dip"
                        android:layout_marginTop="10.0dip"
                        android:src="@drawable/into_detail" >
                    </ImageView>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>
